cargo-features = ["workspace-inheritance"]

[workspace]
members = ["crates/*"]
default-members = ["crates/ez", "crates/examples"]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jeremyBanks/ez"
rust-version = "1.59.0"
version = "0.7.0-dev.0"

[workspace.dependencies]
derive-syn-parse = "0.1.5"
derive_more = "0.99.17"
eyre = "0.6.8"
indexmap = "1.8.0"
itertools = "0.10.3"
num-traits = "0.2.14"
proc-macro2 = "1.0.36"
quote = "1.0.15"
regex = "1.5.5"
syn = "1.0.86"
tokio = "1.17.0"
tracing = "0.1.32"
serde = { version = "1.0.136", features = ["derive"] }
tap = "1.0.1"
toml = "0.5.8"


[workspace.metadata.release]
consolidate-commits = true
consolidate-pushes = true
dev-version = true
dev-version-ext = "dev"
post-release-commit-message = "v{{next_version}}"
pre-release-commit-message = "v{{version}}"
shared-version = true
tag-message = "https://crates.io/crates/{{crate_name}}/{{version}}"
tag-name = "{{version}}"

[profile.dev.package.backtrace]
opt-level = 3
