cargo-features = ["workspace-inheritance"]

[workspace]
members = ["crates/*"]
default-members = ["crates/ez", "crates/examples"]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jeremyBanks/ez"
rust-version = "1.61.0"
version = "0.7.0-dev.0"

[workspace.dependencies]
anymap = "0.12.1"
backtrace = "0.3.65"
batteries.path = "crates/batteries"
bitflags = "1.3.2"
blake3 = "1.3.1"
bumpalo = "3.9.1"
bytes = "1.1.0"
cfg-if = "1.0.0"
clap = "3.1.18"
color-eyre = "0.6.1"
criterion = "0.3.5"
crossbeam = "0.8.1"
crossterm = "0.23.2"
csv = "1.1.6"
derive-syn-parse = "0.1.5"
derive_more = "0.99.17"
digest = "0.10.3"
doop.path = "crates/doop"
dotenv = "0.15.0"
dpc-pariter = "0.5.1"
elor = "1.1.1"
erro.path = "crates/erro"
euclid = "0.22.7"
eyre = "0.6.8"
ez-core.path = "crates/ez-core"
ez-macros.path = "crates/ez-macros"
ez-main.path = "crates/ez-main"
ez-proc-macro.path = "crates/ez-proc-macro"
ez.path = "crates/ez"
git2 = "0.14.4"
hex = "0.4.3"
hex-literal = "0.3.4"
home = "0.5.3"
hyper = "0.14.18"
iai = "0.1.1"
implicint.path = "crates/implicint"
indexmap = "1.8.1"
inherent = "1.0.1"
itertools = "0.10.3"
lazy_static = "1.4.0"
match_cfg = "0.1.0"
mio = "0.8.3"
munge = "0.2.0"
nix = "0.24.1"
num-derive = "0.3.3"
num-traits = "0.2.15"
once_cell = "1.11.0"
parking_lot = "0.12.0"
paste = "1.0.7"
petgraph = "0.6.0"
proc-macro2 = "1.0.39"
quote = "1.0.18"
rand = "0.8.5"
rand_pcg = "0.3.1"
rayon = "1.5.3"
rdbc = "0.1.6"
regex = "1.5.5"
reqwest = "0.11.10"
save.path = "crates/save"
scopeguard = "1.1.0"
serde = "1.0.137"
serde_json = "1.0.81"
sha-1 = "0.10.0"
sha2 = "0.10.2"
sha3 = "0.10.1"
socket2 = "0.4.4"
static_assertions = "1.1.0"
strum = "0.24.0"
syn = { version = "1.0.95", features = ["extra-traits", "full", "visit", "visit-mut", "fold"] }
tap = "1.0.1"
tempfile = "3.3.0"
termcolor = "1.1.3"
thiserror = "1.0.31"
thousands = "0.2.0"
tokio = "1.18.2"
toml = "0.5.9"
tracing = "0.1.34"
tracing-error = "0.2.0"
tracing-subscriber = "0.3.11"
tracing-tree = "0.2.0"
trybuild = "1.0.61"
typed-arena = "2.0.1"
typenum = "1.15.0"
unicode-segmentation = "1.9.0"
url = "2.2.2"
walkdir = "2.3.2"

[workspace.metadata.release]
consolidate-commits = true
consolidate-pushes = true
dev-version = true
dev-version-ext = "dev"
post-release-commit-message = "v{{next_version}}"
pre-release-commit-message = "v{{version}}"
shared-version = true
tag-message = "https://crates.io/crates/{{crate_name}}/{{version}}"
tag-name = "{{version}}"

[profile.dev.package.backtrace]
opt-level = 3
