[package]
authors = ["Jeremy Banks <_@jeremy.ca>"]
autobins = false
description = "ಠ_ಠ"
documentation = "https://docs.rs/ez"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "ez--examples"
repository = "https://github.com/jeremyBanks/ez"
version = "0.0.2-dev.5"

[lib]
name = "_examples"
proc-macro = true

[dependencies]
ez = { path = "..", version = "=0.0.2-dev.5"}
