[package]
authors = ["Jeremy Banks <_@jeremy.ca>"]
description = "ಠ_ಠ"
documentation = "https://docs.rs/weak"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "weak-build-macros"
repository = "https://github.com/jeremyBanks/weak"
version = "0.0.0-dev.0"

[lib]
proc-macro = true
path = "./lib.rs"
