[package]
description = "batteries included"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "batteries"
rust-version = "1.59.0"
version = "0.0.7-dev"

[features]
std = ["alloc", "core"]
alloc = ["core"]
core = []

[dependencies]
anymap = "0.12.1"
bitflags = "1.3.2"
blake3 = "1.3.1"
bumpalo = "3.9.1"
bytes = "1.1.0"
cfg-if = "1.0.0"
clap = { version = "3.1.8", features = ["derive"] }
crossbeam = "0.8.1"
crossterm = "0.23.2"
csv = "1.1.6"
digest = { version = "0.10.3", features = ["std"] }
doop = { path = "../doop", version = "=0.0.7-dev" }
dpc-pariter = "0.5.1"
elor = "1.0.0"
euclid = "0.22.7"
git2 = "0.14.2"
hex = "0.4.3"
hex-literal = "0.3.4"
home = "0.5.3"
hyper = "0.14.18"
indexmap = "1.8.1"
itertools = "0.10.3"
match_cfg = "0.1.0"
mio = "0.8.2"
munge = "0.2.0"
nix = "0.23.1"
num-traits = "0.2.14"
once_cell = "1.10.0"
parking_lot = "0.12.0"
petgraph = "0.6.0"
proc-macro2 = "1.0.37"
rand = "0.8.5"
rayon = "1.5.1"
rdbc = "0.1.6"
regex = "1.5.5"
reqwest = { version = "0.11.10", features = ["blocking", "cookies", "gzip", "brotli", "deflate", "json", "multipart"] }
scopeguard = "1.1.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
sha-1 = "0.10.0"
sha2 = "0.10.2"
sha3 = "0.10.1"
socket2 = "0.4.4"
strum = "0.24.0"
tap = "1.0.1"
tokio = { version = "1.17.0", features = ["full"] }
toml = "0.5.8"
tracing = "0.1.32"
typed-arena = "2.0.1"
unicode-segmentation = "1.9.0"
url = { version = "2.2.2", features = ["serde"] }
walkdir = "2.3.2"

[package.metadata.release]
consolidate-commits = true
consolidate-pushes = true
dev-version = true
dev-version-ext = "dev"
post-release-commit-message = "v{{next_version}}"
pre-release-commit-message = "v{{version}}"
shared-version = true
tag-message = "https://crates.io/crates/{{crate_name}}/{{version}}"
tag-name = "{{version}}"
