cargo-features = ["workspace-inheritance"]

[package]
name = "doop"
description = "a loop-style macro for local code duplication"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
proc-macro = true

[dependencies]
backtrace.workspace = true
derive-syn-parse.workspace = true
eyre.workspace = true
indexmap.workspace = true
inherent.workspace = true
itertools.workspace = true
paste.workspace = true
proc-macro2.workspace = true
quote.workspace = true
static_assertions.workspace = true
syn.workspace = true
tap.workspace = true
thiserror.workspace = true
trybuild.workspace = true
once_cell.workspace = true

[dev-dependencies]


[package.metadata.release]
consolidate-commits = true
consolidate-pushes = true
dev-version = true
dev-version-ext = "dev"
post-release-commit-message = "v{{next_version}}"
pre-release-commit-message = "v{{version}}"
shared-version = true
tag-message = "https://crates.io/crates/{{crate_name}}/{{version}}"
tag-name = "{{version}}"
