cargo-features = ["workspace-inheritance"]

[package]
description = "internal"
edition.workspace = true
license.workspace = true
name = "erro"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]

[package.metadata.release]
consolidate-commits = true
consolidate-pushes = true
dev-version = true
dev-version-ext = "dev"
post-release-commit-message = "v{{next_version}}"
pre-release-commit-message = "v{{version}}"
shared-version = true
tag-message = "https://crates.io/crates/{{crate_name}}/{{version}}"
tag-name = "{{version}}"
