cargo-features = ["workspace-inheritance"]

[package]
edition = "2021"
name = "run-example"
publish = false
version = "0.0.0"

[[bin]]
name = "run-example"
doc = false

[dependencies]
ez = { path = "../ez" }

[dev-dependencies]
eyre = { version = "*" }
tokio = { version = "*", features = ["full"] }

[package.metadata.release]
release = false
