cargo-features = ["workspace-inheritance"]

[package]
edition.workspace = true
name = "run-example"
publish = false
version = "0.0.0"

[[bin]]
name = "run-example"
doc = false

[dependencies]
ez = { path = "../ez" }

[dev-dependencies]
eyre = { version = "*" }
tokio = { version = "*", features = ["full"] }

[package.metadata.release]
release = false
