[package]
authors = ["Jeremy Banks <_@jeremy.ca>"]
description = "internal"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "ez-batteries"
repository = "https://github.com/jeremyBanks/ez"
version = "0.0.7-dev"

[lib]
doc = false

[dependencies]
blake3 = "1.3.1"
bytes = "1.1.0"
clap = "3.1.2"
crossbeam = "0.8.1"
crossterm = "0.23.0"
csv = "1.1.6"
digest = { version = "0.10.3", features = ["std"] }
doop = { path = "../doop", version = "=0.0.7-dev" }
dpc-pariter = "0.5.1"
either = { version = "1.6.1", features = ["serde"] }
euclid = "0.22.6"
indexmap = "1.8.0"
itertools = "0.10.3"
match_cfg = "0.1.0"
num-traits = "0.2.14"
once_cell = "1.9.0"
parking_lot = "0.12.0"
rand = "0.8.4"
rayon = "1.5.1"
regex = "1.5.4"
reqwest = { version = "0.11.9", features = ["blocking", "cookies", "gzip", "brotli", "deflate", "json", "multipart"] }
serde_json = "1.0.79"
sha2 = "0.10.2"
sha3 = "0.10.1"
tap = "1.0.1"
tokio = "1.17.0"
toml = "0.5.8"
tracing = "0.1.30"
unicode-segmentation = "1.9.0"
url = { version = "2.2.2", features = ["serde"] }
walkdir = "2.3.2"

[package.metadata.release]
consolidate-commits = true
consolidate-pushes = true
dev-version = true
dev-version-ext = "dev"
post-release-commit-message = "v{{next_version}}"
pre-release-commit-message = "v{{version}}"
shared-version = true
tag-message = "https://crates.io/crates/{{crate_name}}/{{version}}"
tag-name = "{{version}}"
