[package]
autobins = false
description = "internal"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "ez-core"
repository = "https://github.com/jeremyBanks/ez"
rust-version = "1.59.0"
version = "0.0.7-dev"

[lib]
doc = false

[dependencies]
eyre = "0.6.6"
ez-macros = { path = "../ez-macros", version = "=0.0.7-dev"}

[package.metadata.release]
consolidate-commits = true
consolidate-pushes = true
dev-version = true
dev-version-ext = "dev"
post-release-commit-message = "v{{next_version}}"
pre-release-commit-message = "v{{version}}"
shared-version = true
tag-message = "https://crates.io/crates/{{crate_name}}/{{version}}"
tag-name = "{{version}}"
