cargo-features = ["workspace-inheritance"]

[package]
autobins = false
description = "internal"
edition.workspace = true
license.workspace = true
name = "ez-core"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
doc = false

[dependencies]
eyre.workspace = true
ez-macros = { path = "../ez-macros", version = "=0.7.0-dev.0"}

[package.metadata.release]
consolidate-commits = true
consolidate-pushes = true
dev-version = true
dev-version-ext = "dev"
post-release-commit-message = "v{{next_version}}"
pre-release-commit-message = "v{{version}}"
shared-version = true
tag-message = "https://crates.io/crates/{{crate_name}}/{{version}}"
tag-name = "{{version}}"
