[package]
authors = ["Jeremy Banks <_@jeremy.ca>"]
description = "ಠ_ಠ"
documentation = "https://docs.rs/ez"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "ez-examples"
publish = false
repository = "https://github.com/jeremyBanks/ez"
version = "0.0.2-ez.0"

[dependencies]
ez = { path = "../ez", version = "=0.0.2-ez.0"}

[package.metadata.release]
release = false
