[package]
edition = "2021"
name = "ez-examples"
publish = false
version = "0.0.0"

[[bin]]
name = "ez-examples"
doc = false

[dependencies]
ez = { path = "../ez" }

[dev-dependencies]
eyre = { version = "*" }
tokio = { version = "*", features = ["full"] }

[package.metadata.release]
release = false
