[package]
authors = ["Jeremy Banks <_@jeremy.ca>"]
description = "internal"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "ez-int"
repository = "https://github.com/jeremyBanks/ez"
version = "0.0.7-dev"

[dependencies]
eyre = "0.6.6"
ez = { path = "../ez-core", package = "ez-core", version = "=0.0.7-dev" }

[package.metadata.release]
consolidate-commits = true
consolidate-pushes = true
dev-version = true
dev-version-ext = "dev"
post-release-commit-message = "v{{next_version}}"
pre-release-commit-message = "v{{version}}"
shared-version = true
tag-message = "https://crates.io/crates/{{crate_name}}/{{version}}"
tag-name = "{{version}}"

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples=examples"]
