[package]
authors = ["Jeremy Banks <_@jeremy.ca>"]
autobins = false
description = "ಠ_ಠ"
documentation = "https://docs.rs/ez"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "ez-internal"
repository = "https://github.com/jeremyBanks/ez"
version = "0.0.2-dev.5"

[dependencies]
color-eyre = "0.6.0"
dotenv = "0.15.0"
eyre = "0.6.6"
ezio = "0.1.2"
fehler = "1.0.0"
proc-macro2 = "1.0.36"
quote = "1.0.15"
syn = { version = "1.0.86", features = ["full"] }
tokio = { version = "1.16.1", features = ["full"] }
tracing = { version = "0.1.30", features = ["log"] }
tracing-error = { version = "0.2.0", features = ["traced-error"] }
tracing-subscriber = { version = "0.3.7", features = ["env-filter"] }
