[package]
authors = ["Jeremy Banks <_@jeremy.ca>"]
autobins = false
description = "internal"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "ez-main"
repository = "https://github.com/jeremyBanks/ez"
version = "0.0.7-dev"

[lib]
doc = false

[dependencies]
color-eyre = "0.6.0"
dotenv = "0.15.0"
ez = { path = "../ez-core", package = "ez-core", version = "=0.0.7-dev" }
ez-macros = { path = "../ez-macros", version = "=0.0.7-dev"}
tokio = { version = "1.16.0", features = ["full"] }
tracing = { version = "0.1.30", features = ["log"] }
tracing-error = { version = "0.2.0", features = ["traced-error"] }
tracing-subscriber = { version = "0.3.7", features = ["env-filter"] }
tracing-tree = "0.2.0"

[package.metadata.release]
consolidate-commits = true
consolidate-pushes = true
dev-version = true
dev-version-ext = "dev"
post-release-commit-message = "v{{next_version}}"
pre-release-commit-message = "v{{version}}"
shared-version = true
tag-message = "https://crates.io/crates/{{crate_name}}/{{version}}"
tag-name = "{{version}}"
