cargo-features = ["workspace-inheritance"]

[package]
autobins = false
description = "internal"
edition.workspace = true
license.workspace = true
name = "ez-main"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
doc = false

[dependencies]
color-eyre = "0.6.0"
dotenv = "0.15.0"
ez = { path = "../ez-core", package = "ez-core", version = "=0.7.0-dev.0" }
ez-macros = { path = "../ez-macros", version = "=0.7.0-dev.0"}
tokio = { version = "1.16.0", features = ["full"] }
tracing = { version = "0.1.30", features = ["log"] }
tracing-error = { version = "0.2.0", features = ["traced-error"] }
tracing-subscriber = { version = "0.3.7", features = ["env-filter"] }
tracing-tree = "0.2.0"

[package.metadata.release]
consolidate-commits = true
consolidate-pushes = true
dev-version = true
dev-version-ext = "dev"
post-release-commit-message = "v{{next_version}}"
pre-release-commit-message = "v{{version}}"
shared-version = true
tag-message = "https://crates.io/crates/{{crate_name}}/{{version}}"
tag-name = "{{version}}"
