[package]
authors = ["Jeremy Banks <_@jeremy.ca>"]
description = "internal. not stable."
documentation = "https://docs.rs/ez"
edition = "2021"
homepage =  "https://crates.io/crates/ez"
license = "MIT OR Apache-2.0"
name = "ez-proc-macro"
repository = "https://github.com/jeremyBanks/ez"
version = "0.0.7-dev"

[lib]
proc-macro = true

[dependencies]
ez-impl = { version = "0.0.7-dev", path = "../ez-impl" }
proc-macro2 = "1.0.36"
quote = "1.0.15"
syn = { version = "1.0.86", features = ["full", "visit", "visit-mut", "fold", "derive", "parsing", "printing", "clone-impls", "extra-traits", "proc-macro"] }

[package.metadata.release]
consolidate-commits = true
consolidate-pushes = true
dev-version = true
dev-version-ext = "dev"
post-release-commit-message = "v{{next_version}}"
pre-release-commit-message = "v{{version}}"
shared-version = true
tag-message = "https://crates.io/crates/ez/{{version}}"
tag-name = "{{version}}"
