[package]
authors = ["Jeremy Banks <_@jeremy.ca>"]
autobins = false
description = "internal"
documentation = "https://docs.rs/ez"
edition = "2021"
homepage =  "https://crates.io/crates/ez"
license = "MIT OR Apache-2.0"
name = "ez-proc-macro"
repository = "https://github.com/jeremyBanks/ez"
rust-version = "1.59.0"
version = "0.0.7-dev"

[lib]
doc = false
proc-macro = true

[dependencies]
derive-syn-parse = "0.1.5"
eyre = "0.6.6"
indexmap = "1.8.0"
itertools = "0.10.3"
proc-macro2 = { version = "1.0.36", features = ["span-locations"] }
quote = "1.0.15"
syn = { version = "1.0.86", features = ["full", "visit", "visit-mut", "fold", "derive", "parsing", "printing", "clone-impls", "extra-traits", "proc-macro"] }

[package.metadata.release]
consolidate-commits = true
consolidate-pushes = true
dev-version = true
dev-version-ext = "dev"
post-release-commit-message = "v{{next_version}}"
pre-release-commit-message = "v{{version}}"
shared-version = true
tag-message = "https://crates.io/crates/ez/{{version}}"
tag-name = "{{version}}"
