cargo-features = ["workspace-inheritance"]

[package]
name = "ez-proc-macro"
autobins = false
description = "internal"
documentation = "https://docs.rs/ez"
homepage =  "https://crates.io/crates/ez"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
doc = false
proc-macro = true

[dependencies]
derive-syn-parse.workspace = true
eyre.workspace = true
indexmap.workspace = true
itertools.workspace = true
proc-macro2 = { workspace = true, features = ["span-locations"] }
quote.workspace = true
syn = { workspace = true, features = ["full", "visit", "visit-mut", "fold", "derive", "parsing", "printing", "clone-impls", "extra-traits", "proc-macro"] }

[package.metadata.release]
consolidate-commits = true
consolidate-pushes = true
dev-version = true
dev-version-ext = "dev"
post-release-commit-message = "v{{next_version}}"
pre-release-commit-message = "v{{version}}"
shared-version = true
tag-message = "https://crates.io/crates/ez/{{version}}"
tag-name = "{{version}}"
