cargo-features = ["workspace-inheritance"]

[package]
description = "A collection of easy-to-use, beginner-friendly utilities for Rust."
edition.workspace = true
license.workspace = true
name = "ez"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = ["int", "batteries", "main"]
int = ["implicint"]
main = ["ez-main"]

[dependencies]
batteries = { path = "../batteries", version = "=0.7.0-dev.0", optional = true }
ez-core = { path = "../ez-core", package = "ez-core", version = "=0.7.0-dev.0" }
implicint = { path = "../implicint", version = "=0.7.0-dev.0", optional = true }
ez-main = { path = "../ez-main", version = "=0.7.0-dev.0", optional = true }
paste = "1.0.6"

[package.metadata.release]
consolidate-commits = true
consolidate-pushes = true
dev-version = true
dev-version-ext = "dev"
post-release-commit-message = "v{{next_version}}"
pre-release-commit-message = "v{{version}}"
shared-version = true
tag-message = "https://crates.io/crates/{{crate_name}}/{{version}}"
tag-name = "{{version}}"

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples=examples"]
