cargo-features = ["workspace-inheritance"]

[package]
name = "ez"
description = "easily"
autoexamples = false
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = ["int", "batteries", "main"]
int = ["implicint"]
main = ["ez-main"]

[dependencies]
ez-core.workspace = true
batteries = { workspace = true, optional = true }
implicint = { workspace = true, optional = true }
ez-main = { workspace = true , optional = true }
paste.workspace = true

[package.metadata.release]
consolidate-commits = true
consolidate-pushes = true
dev-version = true
dev-version-ext = "dev"
post-release-commit-message = "v{{next_version}}"
pre-release-commit-message = "v{{version}}"
shared-version = true
tag-message = "https://crates.io/crates/{{crate_name}}/{{version}}"
tag-name = "{{version}}"

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples=examples"]
