[package]
authors = ["Nicholas Cameron <nrc@ncameron.org>"]
description = "internal fork. not stable."
documentation = "https://docs.rs/ezio"
edition = "2021"
homepage = "https://crates.io/crates/ezio"
license = "Apache-2.0"
name = "ez-ezio"
repository = "https://github.com/jeremyBanks/ez"
version = "0.0.5-dev.1"

[lib]
name = "ezio"

[dependencies]
eyre = "0.6.6"
ez = { version = "0.0.4", features = [] }
rand = "0.8"

[package.metadata.release]
consolidate-commits = true
consolidate-pushes = true
dev-version = true
dev-version-ext = "dev"
post-release-commit-message = "v{{next_version}}"
pre-release-commit-message = "v{{version}}"
shared-version = true
tag-message = "https://crates.io/crates/{{crate_name}}/{{version}}"
tag-name = "{{version}}"
