[package]
authors = ["Nicholas Cameron <nrc@ncameron.org>"]
description = "internal fork of ezio. not stable."
edition = "2021"
homepage = "https://github.com/jeremyBanks/ez/tree/HEAD/crates/ezio"
license = "Apache-2.0"
name = "ez-ezio"
version = "0.0.6"

[lib]
name = "ezio"

[dependencies]
eyre = "0.6.6"
ez = { package = "ez", version = "=0.0.5", features = [] }
rand = "0.8"

[package.metadata.release]
consolidate-commits = true
consolidate-pushes = true
dev-version = true
dev-version-ext = "dev"
post-release-commit-message = "v{{next_version}}"
pre-release-commit-message = "v{{version}}"
shared-version = true
tag-message = "https://crates.io/crates/{{crate_name}}/{{version}}"
tag-name = "{{version}}"
