[package]
authors = ["Nicholas Cameron <nrc@ncameron.org>"]
description = "internal"
edition = "2021"
homepage = "https://github.com/jeremyBanks/ez/tree/HEAD/crates/ezio"
license = "Apache-2.0"
name = "ez-ezio"
rust-version = "1.59.0"
version = "0.0.7-dev"

[lib]
name = "ezio"
doc = false

[dependencies]
eyre = "0.6.6"
ez = { path = "../ez-core", package = "ez-core", version = "=0.0.7-dev" }
ez-int = { path = "../ez-int", version = "=0.0.7-dev", optional = true }
rand = "0.8"

[package.metadata.release]
consolidate-commits = true
consolidate-pushes = true
dev-version = true
dev-version-ext = "dev"
post-release-commit-message = "v{{next_version}}"
pre-release-commit-message = "v{{version}}"
shared-version = true
tag-message = "https://crates.io/crates/{{crate_name}}/{{version}}"
tag-name = "{{version}}"
