cargo-features = ["workspace-inheritance"]

[package]
description = "internal"
edition.workspace = true
license.workspace = true
name = "implicint"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
derive_more = "0.99.17"
doop = { path = "../doop", version = "=0.7.0-dev.0" }
ez = { path = "../ez-core", package = "ez-core", version = "=0.7.0-dev.0" }
num-derive = "0.3.3"
num-traits = "0.2.14"
serde = { version = "1.0.136", features = ["derive"] }

[package.metadata.release]
consolidate-commits = true
consolidate-pushes = true
dev-version = true
dev-version-ext = "dev"
post-release-commit-message = "v{{next_version}}"
pre-release-commit-message = "v{{version}}"
shared-version = true
tag-message = "https://crates.io/crates/{{crate_name}}/{{version}}"
tag-name = "{{version}}"
