[package]
autobins = false
autoexamples = false
name = "rust-run"
description = "run rust"
edition = "2021"
version = "0.0.0-0"

[[bin]]
name = "rust"
path = "src/main.rs"

[dependencies]
color-eyre = "0.6.1"
eyre = "0.6.8"
home = "0.5.3"
once_cell = "1.12.0"
proc-macro2 = { version = "1.0.39", features = ["span-locations"] }
quote = "1.0.18"
sha-1 = "0.10.0"
syn = { version = "1.0.96", features = ["full", "extra-traits", "visit", "visit-mut", "fold"] }
toml = "0.5.9"
tracing = "0.1.34"
env_logger = "0.9.0"

[profile.release]
debug = true
lto = "fat"
opt-level = 3
codegen-units = 1
